--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-dist      : precise
+sudo      : required
+dist      : trusty
 language  : cpp
-
 matrix:
   include:
     - compiler: gcc
@@ -10,18 +10,19 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-      env: COMPILER=g++-5
+      env:
+        - COMPILER=g++-5
     - compiler: clang
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.7
+            - llvm-toolchain-trusty-4.0
           packages:
-            - clang-3.7
-      env: COMPILER=clang++-3.7
-
+            - clang-4.0
+      env:
+        - COMPILER=clang++-4.0
 script:
   - mkdir build
-  - cd    build
+  - cd build
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
