--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,11 @@
-sudo      : required
-dist      : trusty
+dist      : xenial
 language  : cpp
-matrix:
-  include:
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-5
-      env:
-        - COMPILER=g++-5
-    - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-4.0
-          packages:
-            - clang-4.0
-      env:
-        - COMPILER=clang++-4.0
+compiler  :
+  - gcc
+  - clang
+
 script:
   - mkdir build
-  - cd build
-  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
+  - cd    build
+  - cmake ..
+  - make
